--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vercel/kv": "^1.0.1"
+    "redis": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
